--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
 body {
   margin: 0;
-  background-color: #264143;
+  /* background-color: #264143; */
+  background-image: linear-gradient(
+    to right,
+    rgba(235, 218, 218, 0),
+    rgba(38, 65, 67, 1)
+  );
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
