--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,17 +9,17 @@ a.social:hover {
   transform: translateY(-2px);
 }
 a.github {
-  color: #62b0a5;
+  color: #264143;
 }
 
 a.steam {
-  color: #62b0a5;
+  color: #264143;
 }
 
 a.linkedin {
-  color: #62b0a5;
+  color: #264143;
 }
 
 a.instagram {
-  color: #62b0a5;
+  color: #264143;
 }
