renewed project page

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -23,3 +23,12 @@ a.linkedin {
 a.instagram {
   color: #264143;
 }
+
+a.chess {
+  color: #264143;
+}
+
+.tab-stretch {
+  width: 100%;
+  display: flex;
+}
