mobile responsive changes

--- a/src/pages/skills/test.scss
+++ b/src/pages/skills/test.scss
@@ -19,3 +19,18 @@
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
+.MuiImageListItemBar-title {
+    font-size: 1rem;
+    line-height: 24px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: normal;
+}
+
+.css-dasnyc-MuiImageListItemBar-title {
+    font-size: 1rem;
+    line-height: 24px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: normal;
+}
